🐛 overflow y find, add and fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,6 +95,7 @@ main{
         background-size: auto;
         display: flex;
         overflow-x: hidden;
+        overflow-y: hidden;
         .second-section-conteneur{
             position: relative;
             display: flex;
